cluster-services/grafana/bluey/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  namespace: grafana
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: web
